--- a/ksquirrel.desktop
+++ b/ksquirrel.desktop
@@ -4,6 +4,7 @@ Encoding=UTF-8
 Type=Application
 Exec=ksquirrel -caption "%c" %i %m  
 Icon=ksquirrel.png
+MimeType=image/gif;image/x-xpm;image/x-xbm;image/jpeg;image/bmp;image/png;image/x-png;image/tiff;image/x-xcf;image/x-bmp;image/x-psd;image/x-eim;image/x-portable-bitmap;image/x-portable-pixmap;image/x-portable-anymap;image/x-portable-graymap
 DocPath=ksquirrel/index.html
 Comment=
 Comment[de]=
